major bugfix
most ARQ buttons were wired wrong
rewired and added locking to prevent stacking handovers

ready for testing.